--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         
         <center>
             <h1>“Saving one dog will not change the world, but surely for that one dog, the world will change forever.”</h1>
-            <img src="c:\Users\Commvault\Desktop\WEB SITE  SRI PET SHOP🐾\WhatsApp Image 2024-11-17 at 15.40.01_d86d3204.jpg"><br>
+            <img src="WhatsApp Image 2024-11-17 at 15.40.01_d86d3204.jpg"><br>
                  <h1><a href="https://linktr.ee/Bluecross?utm_source=linktree_profile_share&ltsid=32b6417e-acc8-4a1e-8e42-c50aa65abc05">PET ADOPT </a></h1>
                  <h1>RESCUE: "It’s not just a verb. It’s a promise"</h1>
             </center>
@@ -96,7 +96,7 @@
                 <h2>Who We Are....<br>Pet Paradise is a premier pet care resort offering luxury accommodations and recreational activities.
                 </h2>
                
-                <img src="c:\Users\Commvault\Desktop\WEB SITE  SRI PET SHOP🐾\WhatsApp Image 2024-11-17 at 15.40.00_b80af07c.jpg">
+                <img src="WhatsApp Image 2024-11-17 at 15.40.00_b80af07c.jpg">
                  <footer>
                 <p>© 2024 Pet Paradise. All rights reserved.</p>
             </footer>
@@ -120,13 +120,13 @@
             - Secure  daycare</h2>
         <ul>
             <h1>1.PET GROOMING</h1>
-            <img src="c:\Users\Commvault\Desktop\WEB SITE  SRI PET SHOP🐾\WhatsApp Image 2024-11-17 at 16.05.32_61730e80.jpg">
+            <img src="WhatsApp Image 2024-11-17 at 16.05.32_61730e80.jpg">
    <h1>2.VETERINARY SERVICES</h1>
-            <img src="c:\Users\Commvault\Desktop\WEB SITE  SRI PET SHOP🐾\WhatsApp Image 2024-11-17 at 16.05.31_f570d2cf.jpg">
+            <img src="WhatsApp Image 2024-11-17 at 16.05.31_f570d2cf.jpg">
             <h1>3.PET SUPPLIES</h1>
-            <img src="c:\Users\Commvault\Desktop\WEB SITE  SRI PET SHOP🐾\WhatsApp Image 2024-11-17 at 16.05.31_bedd775a.jpg">
+            <img src="WhatsApp Image 2024-11-17 at 16.05.31_bedd775a.jpg">
             <h1>4.PET BOARDIND</h1>
-            <img src="c:\Users\Commvault\Desktop\WEB SITE  SRI PET SHOP🐾\WhatsApp Image 2024-11-17 at 16.04.45_2f90e7ab.jpg">
+            <img src="WhatsApp Image 2024-11-17 at 16.04.45_2f90e7ab.jpg">
 
         </ul>
     </CENTER>
